# connectify_rs

./: .gitignore  Cargo.toml  CargoBuildConfig.toml  README.html  README.md  cross_build_on_mac.sh  pyproject.toml
.cargo/: config.toml
.github/workflows/: rust-tests.yml
config/: default.yml
crates/connectify_adhoc/: Cargo.toml
crates/connectify_adhoc/src/: doc.rs  handlers.rs  lib.rs  logic.rs  routes.rs
crates/connectify_calendly/: Cargo.toml  README.md
crates/connectify_calendly/src/: calendly_oauth.rs  calendly_slots.rs  config.rs  handlers.rs  lib.rs  logic.rs  mod.rs  models.rs  routes.rs
crates/connectify_common/: Cargo.toml  README.md
crates/connectify_common/src/: error.rs  features.rs  handlers.rs  http.rs  lib.rs  logging.rs  logic.rs  models.rs  routes.rs  services.rs
crates/connectify_common/src/http/: client.rs
crates/connectify_config/: Cargo.toml  README.md  build.rs
crates/connectify_config/src/: env_vars.rs  lib.rs  models.rs  secrets.rs
crates/connectify_config_static/: Cargo.toml
crates/connectify_config_static/src/: lib.rs  models.rs
crates/connectify_db/: Cargo.toml  README.md
crates/connectify_db/src/: client.rs  error.rs  factory.rs  lib.rs  repository.rs
crates/connectify_db/src/repositories/: device_registration.rs  device_registration_factory.rs  device_registration_sql.rs  mod.rs
crates/connectify_firebase/: Cargo.toml
crates/connectify_firebase/src/: auth.rs  client.rs  doc.rs  handlers.rs  lib.rs  models.rs  repository.rs  repository_factory.rs  routes.rs  service.rs
crates/connectify_fulfillment/: Cargo.toml  README.md
crates/connectify_fulfillment/src/: auth.rs  doc.rs  handlers.rs  lib.rs  logic.rs  routes.rs
crates/connectify_gcal/: Cargo.toml  README.md
crates/connectify_gcal/benches/: calculate_available_slots_benchmark.rs
crates/connectify_gcal/proptest-regressions/: logic_proptest.txt
crates/connectify_gcal/src/: auth.rs  auth_test.rs  doc.rs  handlers.rs  handlers_test.rs  lib.rs  logic.rs  logic_midnight_test.rs  logic_proptest.rs  logic_test.rs  routes.rs  routes_test.rs  service.rs  test.rs
crates/connectify_gcal/tests/: api_tests.rs  contract_tests.rs  e2_e_booking_flow_test.rs  e2e_tests.rs  fixtures.rs
crates/connectify_payrexx/: Cargo.toml
crates/connectify_payrexx/src/: auth.rs  doc.rs  handlers.rs  lib.rs  logic.rs  routes.rs
crates/connectify_stripe/: Cargo.toml  README.md
crates/connectify_stripe/src/: doc.rs  error.rs  handlers.rs  lib.rs  logic.rs  routes.rs  service.rs
crates/connectify_twilio/: Cargo.toml  README.md
crates/connectify_twilio/src/: doc.rs  lib.rs  routes.rs  service.rs  twilio_sms.rs  twilio_sms_test.rs  twilio_token.rs
crates/services/connectify_backend/: Cargo.toml  README.md  sample_payrexx-webhhok.json
crates/services/connectify_backend/src/: app_state.rs  main.rs  service_factory.rs
crates/services/rustdis/: Cargo.toml
crates/services/rustdis/src/: main.rs
docs/: ENVIRONMENT_VARIABLES.md  TESTING.md  api_documentation.md  architecture.md  architecture_diagrams.md  code_documentation.md  dependency_injection.md  deployment.md  developer_guide.md  integration_points.md  performance.md  tasks.md  testing_strategy.md  troubleshooting.md
tests/e2e/: README.md  booking_admin_const.py  common_const.py  playwright_const.py  requirements.txt  run_test.py  stripe_test_const.py  success_const.py  test_adhoc_booking.py  test_admin_delete_bookings.py  test_gcal_booking.py  test_session_id.py  webcam_const.py
