[workspace.lints.rust]
unsafe_code = "forbid"
[workspace]
members = [
    "crates/services/connectify_backend",
    "crates/connectify_config_static",
    "crates/connectify_config",
#    "crates/connectify_calendly",
    "crates/connectify_gcal",
    "crates/connectify_common",
    "crates/connectify_payrexx",
    "crates/connectify_stripe",
    "crates/connectify_fulfillment",
]
resolver = "2"  # required for clean feature resolution across crates

[workspace.dependencies]
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
config = "0.15"
dotenv = "0.15"
once_cell = "1.21"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
utoipa = { version = "5"}
utoipa-swagger-ui = { version = "9", features = ["axum"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"]}
thiserror = "2"
http = "1.0"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
base64 = "0.22.1"
serde_urlencoded = "0.7.1"
[profile.release]
lto = "fat"
