[package]
name = "connectify-calendly"
version = "0.1.0"
edition = "2021"

#[dependencies]
##axum = { version = "0.8", features = ["macros"]  }
##tokio = { version = "1", features = ["full"] }
##serde = { version = "1", features = ["derive"] }
##serde_json = "1"
##tracing = "0.1"
##tracing-subscriber = "0.3"
#axum = { workspace = true }
#tokio = { workspace = true }
#serde = { workspace = true }
#serde_json = { workspace = true }
#tracing = { workspace = true }
#tracing-subscriber = { workspace = true }
#
## your modular crates
#connectify_config = { path = "../../connectify_config" }
#connectify_common = { path = "../crates/connectify_common" }