[package]
name = "connectify-common"
version = "0.1.0"
edition = "2021"
# connectify_backend/Cargo.toml
[features]
openapi = [
    "dep:utoipa",
    "dep:utoipa-swagger-ui",
]
[dependencies]
serde = { workspace = true }
utoipa = { workspace = true, optional = true }
utoipa-swagger-ui = { workspace = true, optional = true }