[package]
name = "connectify-common"
version = "0.1.0"
edition = "2021"
# connectify_backend/Cargo.toml
[features]
openapi = [
    "dep:utoipa",
    "dep:utoipa-swagger-ui",
]
gcal = []
stripe = []
twilio = []
payrexx = []
fulfillment = []
adhoc = []
[dependencies]
serde = { workspace = true }
utoipa = { workspace = true, optional = true }
utoipa-swagger-ui = { workspace = true, optional = true }
axum = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
# Journald is Linux-only; compile gated with #[cfg]
tracing-journald = {  workspace = true }
connectify-config = { path = "../connectify_config" }
