[package]
name = "connectify-config"
version = "0.1.0"
edition = "2021"
[features]
openapi = [
    "dep:utoipa",
#    "dep:utoipa-swagger-ui",
]
[dependencies]
serde = { workspace = true }
utoipa = { workspace = true, optional = true }
utoipa-swagger-ui = { workspace = true, optional = true }
config = { workspace = true }
dotenv = { workspace = true }
once_cell = { workspace = true }
serde_json = { workspace = true }
connectify-config-static = { path = "../connectify_config_static" }
ring = "0.17.7"
base64 = { workspace = true }
serde_yaml = "0.9.32"
thiserror = { workspace = true }
toml = "0.8.20"
notify = "4.0.17"
tracing = {workspace = true}
[build-dependencies]
dotenv = { version = "0.15", optional = true }
config = { workspace = true }
connectify-config-static = { path = "../connectify_config_static" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = {workspace = true}
