[package]
name = "connectify-config-static"
version = "0.1.0"
edition = "2021"
[features]
openapi = [
    "dep:utoipa",
#    "dep:utoipa-swagger-ui",
]
[dependencies]
serde = { workspace = true }
utoipa = { workspace = true, optional = true }
utoipa-swagger-ui = { workspace = true, optional = true }
config = { workspace = true }
dotenv = { workspace = true }
once_cell = { workspace = true }
serde_json = { workspace = true}
tracing = {workspace = true}