[package]
name = "connectify-db"
version = "0.1.0"
edition = "2021"
authors = ["Trahe Consult <trahe@mac.com>"]
description = "Database integration for Connectify"

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
openapi = [
    "dep:utoipa",
    "utoipa/axum_extras",
    "dep:utoipa-swagger-ui",
    "utoipa-swagger-ui/axum"
]

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
connectify-config = { path = "../connectify_config" }
connectify-common = { path = "../connectify_common" }
tracing = { workspace = true }
chrono = { workspace = true }

# Database-specific dependencies
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "macros", "json", "chrono", "uuid", "sqlite", "any", "sqlite"] }

# OpenAPI documentation
utoipa = { workspace = true, optional = true }
utoipa-swagger-ui = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true

[package.metadata.docs.rs]
# Enable the openapi feature when building docs on docs.rs
features = ["openapi"]
# This makes sure the docs include all the OpenAPI/Swagger UI components
rustdoc-args = ["--cfg", "docsrs"]
