[package]
name = "connectify-firebase"
version = "0.1.0"
edition = "2021"
authors = ["Trahe Consult <trahe@mac.com>"]
description = "Firebase Cloud Messaging integration for Connectify"

[features]
default = []
openapi = [
    "dep:utoipa", 
    "utoipa/axum_extras",
    "dep:utoipa-swagger-ui",
    "utoipa-swagger-ui/axum"
]

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
connectify-config = { path = "../connectify_config" }
connectify-common = { path = "../connectify_common" }
tracing = { workspace = true }

# Firebase-specific dependencies
reqwest = { workspace = true, features = ["json"] }
yup-oauth2 = "8.3"  # Same as your Google Calendar integration

# OpenAPI documentation
utoipa = { workspace = true, optional = true }
utoipa-swagger-ui = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = "0.5"

[lints]
workspace = true

[package.metadata.docs.rs]
# Enable the openapi feature when building docs on docs.rs
features = ["openapi"]
# This makes sure the docs include all the OpenAPI/Swagger UI components
rustdoc-args = ["--cfg", "docsrs"]
