[package]
name = "connectify-gcal"
version = "0.1.0"
edition = "2021"
authors = ["Trahe Consult <trahe@mac.com>"]
description = "Google Calendar integration for Connectify"
license = "MIT OR Apache-2.0"
[features]
openapi = [
    "dep:utoipa",
    "utoipa/axum_extras",
    "dep:utoipa-swagger-ui",
#    "utoipa/chrono_types_with_format",
    "utoipa-swagger-ui/axum",
]
[dependencies]
# Google Calendar
google-calendar3 = { version = "6.0", features = ["yup-oauth2"] }
yup-oauth2 = { version = "12.1", default-features = false, features = ["hyper-rustls", "service_account", "ring"] }

hyper-util = { version = "0.1.11", features = ["client-legacy", "tokio"] }

# Your workspace dependencies
tracing = { workspace = true }
axum = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
chrono-tz = {workspace = true}
serde_json = { workspace = true }
connectify-config = { path = "../connectify_config" }
connectify-common = { path = "../connectify_common" }
async-trait = "0.1.77"
uuid = { version = "1.7.0", features = ["v4"] }
utoipa = { workspace = true, optional = true }
utoipa-swagger-ui = { workspace = true, optional = true }
[dev-dependencies]
mockall = "0.13.1"
tokio = { version = "1.36.0", features = ["full", "test-util", "macros"] }
proptest = "1.4.0"
criterion = { version = "0.5.1", features = ["async_tokio"] }

[[bench]]
name = "calculate_available_slots_benchmark"
harness = false
