[package]
name = "connectify-twilio"
version = "0.1.1"
edition = "2021"
authors = ["Holger Trahe<trahe@mac.com>"]
description = "A simple Actix-Web server providing Twilio Video access tokens and optional Stripe Checkout sessions."
license = "MIT"
readme = "README.md"
repository = "https://github.com/holg/tiny_twilio_stripe"
homepage = "https://github.com/holg/tiny_twilio_stripe"
documentation = "https://docs.rs/tiny_twilio_stripe"
keywords = ["twilio", "video", "actix", "stripe", "payrexx"]
categories = ["network-programming", "web-programming::http-server"]
exclude = ["target/", ".env.*", "secrets/", ".git/"]

[features]
openapi = [
    "dep:utoipa",
    "utoipa/axum_extras",
    "dep:utoipa-swagger-ui",
    #    "utoipa/chrono_types_with_format",
    "utoipa-swagger-ui/axum",
]

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
axum = { workspace = true }
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] } # Ensure chrono is a direct dependency
connectify-config = { path = "../connectify_config" }
connectify-common = { path = "../connectify_common" }
thiserror = { workspace = true }
reqwest = { workspace = true }
utoipa = { workspace = true, optional = true }
utoipa-swagger-ui = { workspace = true, optional = true }
