[package]
name = "connectify-backend"
version = "0.1.0"
edition = "2021"
# connectify_backend/Cargo.toml
[features]
openapi = [
    "dep:utoipa",
    "dep:utoipa-swagger-ui",
    "utoipa/axum_extras",
    "utoipa-swagger-ui/axum",
    "connectify-gcal/openapi",     # ✅ forward the feature
]
payrexx = [
    "connectify-payrexx",
    "connectify-payrexx/openapi", # ✅ forward the feature
]
stripe = [
    "connectify-stripe",
    "connectify-stripe/openapi", # ✅ forward the feature
]

twilio = [
    "connectify-twilio",
    "connectify-twilio/openapi", # ✅ forward the feature
]
gcal = [
    "connectify-gcal",
    "connectify-gcal/openapi", # ✅ forward the feature
]
fulfillment = [
    "connectify-fulfillment",
    "connectify-fulfillment/openapi", # ✅ forward the feature
]
gcal_fulfillment = ["connectify-gcal", "connectify-fulfillment", "connectify-fulfillment/gcal"]

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
http = { workspace = true }
tower-http = { workspace = true }
connectify-config = { path = "../../connectify_config" }
connectify-twilio = { path = "../../connectify_twilio", optional = true }
connectify-gcal = { path = "../../connectify_gcal", optional = true }
connectify-common = { path = "../../connectify_common" }
connectify-payrexx = { path = "../../connectify_payrexx", optional = true }
connectify-stripe = { path = "../../connectify_stripe", optional = true }
connectify-fulfillment = { path = "../../connectify_fulfillment", optional = true }
utoipa = { workspace = true, optional = true }
utoipa-swagger-ui = { workspace = true, optional = true }